comments speedrunned...
